Some file formats (exr, tiff, Radiance HDR) cannot be saved in folder trees which contain umlauts #32377

Closed
opened 2012-08-21 18:39:05 +02:00 by Heiko Schmidt · 5 comments

%%%Hi,

as I tried to save an image in openexr format in a folder like c:/ü for example an error message appears "Error writing render result".

The console shows this: "IMB_exr_begin_write: ERROR: Cannot open image file "C:\Users\Heik\Desktop\├╝\unt
itled.exr". No such file or directory."

I tried then all the remaining formats and have the same issue with tiff, Radiance HDR and openexr multilayer.

This problem exists on win 7 64 bit with a 64 bit build (blender-2.63-r50064-win64.zip from buildbot). I tested it under Ubuntu 12.04 64 bit but here works all fine.

But DDS seems not to work at all either on Win or Ubuntu and it plays no rule here if there are umlauts or not in the folder structure.

%%%

%%%Hi, as I tried to save an image in openexr format in a folder like c:/ü for example an error message appears "Error writing render result". The console shows this: "IMB_exr_begin_write: ERROR: Cannot open image file "C:\Users\Heik\Desktop\├╝\unt itled.exr". No such file or directory." I tried then all the remaining formats and have the same issue with tiff, Radiance HDR and openexr multilayer. This problem exists on win 7 64 bit with a 64 bit build (blender-2.63-r50064-win64.zip from buildbot). I tested it under Ubuntu 12.04 64 bit but here works all fine. But DDS seems not to work at all either on Win or Ubuntu and it plays no rule here if there are umlauts or not in the folder structure. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%I've committed a fix for TIFF, and removed DDS from the list of file types, we only support loading DDS files currently. Radiance HDR code looks ok to me, can't see why that wouldn't work...

Regarding OpenEXR, that looks like it's fixable too, but is more complicated, will look into that later.%%%

%%%I've committed a fix for TIFF, and removed DDS from the list of file types, we only support loading DDS files currently. Radiance HDR code looks ok to me, can't see why that wouldn't work... Regarding OpenEXR, that looks like it's fixable too, but is more complicated, will look into that later.%%%
Author

%%%Hmm, Radiance HDR works now maybe I did muddle up some things yesterday. :)%%%

%%%Hmm, Radiance HDR works now maybe I did muddle up some things yesterday. :)%%%

%%%Fix for OpenEXR now in svn too. Thanks for the report, closing.%%%

%%%Fix for OpenEXR now in svn too. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32377
No description provided.