Fix part of #32377: TIFF not saving on windows to paths with special characters, and DDS should not be in the list of file types because we can only load those currently.